Melhorias no fluxo do código.